# vlm-inference-client

./: AGENTS.md  README.md  pyproject.toml
.claude/hooks/: inject_ci_context.sh
.claude/skills/ci-guardian/: SKILL.md
.github/workflows/: ci.yml
docs/: api-services.md  benchmarks.md  cloud-gpu.md  courses.md  finetuning.md  google.md  inference.md  llama.md  rag.md  video-vlm-agents.md
examples/: conditional_routing.py  fall_detection.py  gemma4_inference.py  local_open_model.py  multi_model_analysis.py  react_image_analysis.py  security_monitoring.py  together_nemotron_reasoning.py
scripts/: run.sh  test.sh
src/ghostgrid/: __init__.py  __main__.py  backends.py  cli.py  config.py  image.py  models.py  providers.py  video.py
src/ghostgrid/tools/: __init__.py  builtin.py  parsing.py
src/ghostgrid/workflows/: __init__.py  conditional.py  iterative.py  moa.py  monitoring.py  parallel.py  react.py  sequential.py
src/vlm_agent_gateway/: cli.py
tests/: __init__.py  conftest.py  test_backends.py  test_cli.py  test_config.py  test_image.py  test_models.py  test_providers.py  test_tools.py  test_workflow_failures.py
tests/test_workflows/: test_react.py
vlm-inference-client/cpp/: CMakeLists.txt  Readme.md  main.cpp
